# openmw

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt
CI/: before_install.osx.sh  before_script.msvc.sh
apps/opencs/view/render/: cell.cpp  cellwater.cpp  object.cpp
apps/openmw_test_suite/: CMakeLists.txt
components/sceneutil/: optimizer.hpp
components/terrain/: cellborder.cpp
